--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <section id="banner">
-        <img src="C:\WebDevelopment\nirmala store\iphone.img\logo.jpeg" class="logo">
+        <img src="iphone.img\logo.jpeg" class="logo">
         <div class="banner-text">
             <h1>iphone</h1>
             <p> Apple Reinvent The Phone</p>
@@ -41,7 +41,7 @@
         </nav>
     </div>
     <div id="menuBtn">
-        <img src="C:\WebDevelopment\nirmala store\iphone.img\menu.png" id="menu">
+        <img src="iphone.img\menu.png" id="menu">
     </div>
 
     <!--Features-->
@@ -56,7 +56,7 @@
                 <h1>User interface</h1>
                 <div class="features-desc">
                     <div class="feature-icon">
-                        <img src="C:\WebDevelopment\nirmala store\iphone.img\shield icon.png" alt="">
+                        <img src="iphone.img\shield icon.png" alt="">
                     </div>
                     <div class="feature-text">
                         <p>Apple's Human interface Guidelines(HIG)is a comprehensive resource for designers and developers looking to create greate experience across Apple platforms.Now it's been fully redesigned and refreshed to meet your needs-from your first sketch to the final pixel </p>
@@ -66,7 +66,7 @@
                 <h1>Pre Booking Online</h1>
                 <div class="features-desc">
                     <div class="feature-icon">
-                        <img src="C:\WebDevelopment\nirmala store\iphone.img\tick box.png" alt="">
+                        <img src="iphone.img\tick box.png" alt="">
                     </div>
                     <div class="feature-text">
                         <p>Customers can now pre-order the new iphone 14,Applewatch,and Airpods pro lineups on apple.com and on the Apple store app
@@ -77,7 +77,7 @@
                 <h1>Price</h1>
                 <div class="features-desc">
                     <div class="feature-icon">
-                        <img src="C:\WebDevelopment\nirmala store\iphone.img\dollar.png" alt="">
+                        <img src="iphone.img\dollar.png" alt="">
                     </div>
                     <div class="feature-text">
                         <p>On all the imported iphones,apple has to pay customs duties that are around 22%Not just that,you have to add 18% GST further on the iphones.all these taxes and duties drive of the price iphone in india.most of the iphone that are solid in india end up being 'imported" models,hence the cost remains high </p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="features-img">
-                <img src="C:\WebDevelopment\nirmala store\iphone.img\img5.jpeg" alt="">
+                <img src="iphone.img\img5.jpeg" alt="">
             </div>
         </div>
     </section>
@@ -99,7 +99,7 @@
         </div>
         <div class="service-box">
             <div class="single-service">
-                <img src="C:\WebDevelopment\nirmala store\iphone.img\img1.jpg" alt="">
+                <img src="iphone.img\img1.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>Charging capable work</h3>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="C:\WebDevelopment\nirmala store\iphone.img\img2.jpg" alt="">
+                <img src="iphone.img\img2.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>iphone best camera</h3>
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="C:\WebDevelopment\nirmala store\iphone.img\img 3.jpg" alt="">
+                <img src="iphone.img\img 3.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>iphone 5G</h3>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="single-service">
-                <img src="C:\WebDevelopment\nirmala store\iphone.img\img6.jpeg" alt="">
+                <img src="iphone.img\img6.jpeg" alt="">
                 <div class="overlay"></div>
                 <div class="service-desc">
                     <h3>SIM card</h3>
@@ -197,18 +197,18 @@
         </div>
         <div class="footer-right">
             <h1>Get in Touch</h1>
-            <p>#30 abc Colony, xyz City IN <img src="C:\WebDevelopment\nirmala store\iphone.img\location.png"></p>
-            <p>example@website.com <img src="C:\WebDevelopment\nirmala store\iphone.img\paperplane.png"></p>
-            <p>+01 12345678 <img src="C:\WebDevelopment\nirmala store\iphone.img\phone.png"></p>
+            <p>#30 abc Colony, xyz City IN <img src="iphone.img\location.png"></p>
+            <p>example@website.com <img src="iphone.img\paperplane.png"></p>
+            <p>+01 12345678 <img src="iphone.img\phone.png"></p>
 
         </div>
     </div>
 
     <div class="social-links">
-        <img src="C:\WebDevelopment\nirmala store\iphone.img\facebook (1).png">
-        <img src="C:\WebDevelopment\nirmala store\iphone.img\instagram.png">
-        <img src="C:\WebDevelopment\nirmala store\iphone.img\youtube.png">
-        <img src="C:\WebDevelopment\nirmala store\iphone.img\twitter.png">
+        <img src="iphone.img\facebook (1).png">
+        <img src="iphone.img\instagram.png">
+        <img src="iphone.img\youtube.png">
+        <img src="iphone.img\twitter.png">
         <p>Copyright Sridevi, Front End Web Developer</p>
     </div>
 
