--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="testimonial-row">
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="img/img-1.jpg" alt="">
+                    <img src="C:\WebDevelopment\nirmala store\iphone.img\img-1.jpg" alt="">
                     <div class="user-info">
                         <h4>KEN NORMAN <img src="img/twitter.png"></h4>
                         <small>@kennorman</small>
