--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="img/img-2.jpg" alt="">
+                    <img src="iphone.img\img-2.jpg" alt="">
                     <div class="user-info">
                         <h4>Laira Karian <img src="img/twitter.png"></h4>
                         <small>@lairakarian</small>
