--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="img/img-3.jpg" alt="">
+                    <img src="iphone.img\img-3.jpg" alt="">
                     <div class="user-info">
                         <h4>Ricky Danial <img src="img/twitter.png"></h4>
                         <small>@rickydanial</small>
