--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="user">
                     <img src="iphone.img\img-1.jpg" alt="">
                     <div class="user-info">
-                        <h4>KEN NORMAN <img src="img/twitter.png"></h4>
+                        <h4>KEN NORMAN <img src="iphone.img\twitter.png"></h4>
                         <small>@kennorman</small>
                     </div>
                 </div>
