--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="user">
                     <img src="iphone.img\img-2.jpg" alt="">
                     <div class="user-info">
-                        <h4>Laira Karian <img src="img/twitter.png"></h4>
+                        <h4>Laira Karian <img src="iphone.img\twitter.png"></h4>
                         <small>@lairakarian</small>
                     </div>
                 </div>
