--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="user">
                     <img src="iphone.img\img-3.jpg" alt="">
                     <div class="user-info">
-                        <h4>Ricky Danial <img src="img/twitter.png"></h4>
+                        <h4>Ricky Danial <img src="iphone.img\twitter.png"></h4>
                         <small>@rickydanial</small>
                     </div>
                 </div>
