--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
     </div>
     <div id="menuBtn">
-        <img src="iphone.img\menu.png" id="menu">
+        <img src="" id="menu">
     </div>
 
     <!--Features-->
