--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
     </div>
     <div id="menuBtn">
-<!--         <img src="" id="menu"> -->
+         <img src="" id="menu">
     </div>
 
     <!--Features-->
