--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <small>@lairakarian</small>
                     </div>
                 </div>
-                <p> I found out after a lot of experience that MSI are best and coolest Gaming accessories I have ever seen and i really recommend it Because it is cheaper and more stronger and more cooler and and fit perfect gaming setup
+                <p>I love iphones,especially their features and security and well designed body, and battery life is little bit down,comparing with other android phones,other all good iphones.
                 </p>
             </div>
             <div class="testimonial-col">
@@ -175,7 +175,7 @@
                         <small>@rickydanial</small>
                     </div>
                 </div>
-                <p>volume GPS cannot be increased i have wasted over anhour searching for a solution Which duck wad at Apple decided to make the volume ,for the GPS when Bluetooth connected to the car, so difficult?Or impossible to increase.</p>
+                <p>volume GPS cannot be increased i have wasted over anhour searching for a solution Which duck wad at Apple decided to make the volume ,for t when Bluetooth connected to the car, so difficult?Or impossible to increase.</p>
             </div>
         </div>
     </section>
