--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
                         <small>@rickydanial</small>
                     </div>
                 </div>
-                <p>volume GPS cannot be increased i have wasted over anhour searching for a solution Which duck wad at Apple decided to make the volume ,for t when Bluetooth connected to the car, so difficult?Or impossible to increase.</p>
-            </div>
+                <p>As an Apple iphone user,i am really happy to say that this phone is absolutelyfantastic in features, quality and userfree.i was a common user of android iphone,i was really suprised with it's qualities.if you are planning to buy a new mobile phone,i will suggest you to go with apple iphone.</p>
         </div>
     </section>
 
