--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 	</div>
 	<div class="social-links">
         <a href="https://www.facebook.com/profile.php?id=100087476910826&mibextid=ZbWKwL"><img src="iphone.img\facebook (1).png"></a>
-        <a href="https://www.instagram.com/calc.technologies/"><img src="iphone.img\instagram.png"></a>
+        <a href="https://www.instagram.com/iphone/"><img src="iphone.img\instagram.png"></a>
        <a href="https://www.youtube.com/@calctechnologies"><img src="iphone.img\youtube.png"></a> 
         <a href="https://twitter.com/calctechsocial"><img src="iphone.img\twitter.png"></a>
         <p>Copyright Sridevi, Front End Web Developer</p>
