--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="#banner">HOME</a></li>
                 <li><a href="#service">SERVICES</a></li>
-                <li><a href="#testimonial">TESTIMONIALS</a></li>
+                <li><a href="#testimonial">REVIEWS</a></li>
                 <li><a href="#footer">MEET US</a></li>
 
             </ul>
@@ -138,15 +138,15 @@
         </div>
     </section>
 
-    <!-- Testimonial -->
+    <!-- reviews -->
 
-    <section id="testimonial">
+    <section id="reviews">
         <div class="title-text">
-            <p>TESTIMONIAL</p>
+            <p>REVIEWS</p>
             <h1>What Client Says</h1>
         </div>
-        <div class="testimonial-row">
-            <div class="testimonial-col">
+        <div class="reviews-row">
+            <div class="reviews-col">
                 <div class="user">
                     <img src="iphone.img\img-1.jpg" alt="">
                     <div class="user-info">
