--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
         </div>
     </section>
 
-    <!-- reviews -->
+    <!-- testmonial -->
 
-    <section id="reviews">
+    <section id="testmonial">
         <div class="title-text">
             <p>REVIEWS</p>
             <h1>What Client Says</h1>
         </div>
-        <div class="reviews-row">
-            <div class="reviews-col">
+        <div class="testmonial-row">
+            <div class="testmonial-col">
                 <div class="user">
                     <img src="iphone.img\img-1.jpg" alt="">
                     <div class="user-info">
