--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
     </section>
 
-    <!-- testmonial -->
+    <!-- TESTMONIAL -->
 
     <section id="testmonial">
         <div class="title-text">
